# ParallelProgra_2023-2

./: Optimización.ipynb  README.md  codeunifiedMem.cu
code/: 1.hello.cu  2.vectorAdd.cu  3.matrixMultGlobal.cu  4.matrixMultShared.cu  convolution.cu  convolution_tiled.cu  histogram.cu  merge.cu  vectorAdd.cu
code/01_sgemm/: cublasSgemm.cpp
code/02_gaussian_multi_gpu/: gaussian_multi_gpu_p2p.cu
code/OMP/1.VectorAdd/: CMakeLists.txt  histogram.cpp  histogram.h  main.cpp
code/imageMarge/: image_merging.cpp
code/importImage/: main.cu
examen1/: Examen1.md
examen1/kmerDist/: CMakeLists.txt  main.cpp  plants.fasta
